<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".PatientHomeActivity" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="23dp" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="15dp"
            android:layout_weight="1"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/temperature_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/temp"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:id="@+id/temperature_current"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/current"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/temperature_min"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/min"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/temperature_max"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/max"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/temperature_average"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/average"
                android:textAppearance="?android:attr/textAppearanceMedium" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:layout_weight="1"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/pressure_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/pressure"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:id="@+id/pressure_current"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/current"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/pressure_min"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/min"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/pressure_max"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/max"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/pressure_average"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/average"
                android:textAppearance="?android:attr/textAppearanceMedium" />
        </LinearLayout>
    </LinearLayout>

    <com.androidplot.xy.XYPlot
            android:id="@+id/XYPlot"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            androidPlot.domainLabel="Date"
            androidPlot.rangeLabel="Temperature"
            androidPlot.titleWidget.labelPaint.textSize="@dimen/title_font_size"
            androidPlot.domainLabelWidget.labelPaint.textSize="@dimen/domain_label_font_size"
            androidPlot.rangeLabelWidget.labelPaint.textSize="@dimen/range_label_font_size"
            androidPlot.graphWidget.marginTop="5dp"
            androidPlot.graphWidget.marginLeft="10dp"
            androidPlot.graphWidget.marginBottom="10dp"
            androidPlot.graphWidget.marginRight="10dp"
            androidPlot.graphWidget.rangeLabelPaint.textSize="@dimen/range_tick_label_font_size"
            androidPlot.graphWidget.rangeOriginLabelPaint.textSize="@dimen/range_tick_label_font_size"
            androidPlot.graphWidget.domainLabelPaint.textSize="@dimen/domain_tick_label_font_size"
            androidPlot.graphWidget.domainOriginLabelPaint.textSize="@dimen/domain_tick_label_font_size"
            androidPlot.legendWidget.visible="false"
            androidPlot.graphWidget.gridLinePaint.color="#000000"/>
   
    
    <Button
        android:id="@+id/button_update"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/update" />

</LinearLayout>
